--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,61 +1,29 @@
-<!-- Header -->
-<header id="header">
-  <h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
-	<nav class="links">
-    <!--
-    <ul>
-      <li><a href="#">Lorem</a></li>
-			<li><a href="#">Ipsum</a></li>
-			<li><a href="#">Feugiat</a></li>
-			<li><a href="#">Tempus</a></li>
-			<li><a href="#">Adipiscing</a></li>
-		</ul>
-  -->
-	</nav>
-	<nav class="main">
-    <ul>
-                <!--
-								<li class="search">
-									<a class="fa-search" href="#search">Search</a>
-									<form id="search" method="get" action="#">
-										<input type="text" name="query" placeholder="Search" />
-									</form>
-								</li>
-              -->
-		  <li class="menu">
-		  	<a class="fa-bars" href="#menu">Menu</a>
-			</li>
-		</ul>
-	</nav>
-</header>
+<head>
+  <link href="http://gmpg.org/xfn/11" rel="profile">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
-<!-- Menu -->
-<section id="menu">
-  <!-- Search -->
-  <!--
-  <section>
-	  <form class="search" method="get" action="#">
-	    <input type="text" name="query" placeholder="Search" />
-		</form>
-	</section>
-  -->
-	<!-- Links -->
-	<section>
-	  <ul class="links">
-	    <li>
-		    <a href="/acknowledgement">
-				  <h3>Acknowledgement</h3>
-				  <p>Acknowledgement</p>
-				</a>
-			</li>
-    </ul>
-	</section>
-	<!-- Actions -->
-  <!--
-  <section>
-	  <ul class="actions vertical">
-	    <li><a href="#" class="button big fit">Log In</a></li>
-    </ul>
-  </section>
-  -->
-</section>
+  <!-- Enable responsiveness on mobile devices-->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+  <title>
+    {% if page.title == "Home" %}
+      {{ site.title }} &middot; {{ site.tagline }}
+    {% else %}
+      {{ site.title }} &middot; {{ page.title }}
+    {% endif %}
+  </title>
+
+  <!-- CSS -->
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/poole.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/syntax.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/public/css/lanyon.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
+
+  <!-- Icons -->
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/public/favicon.ico">
+
+  <!-- RSS -->
+  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+</head>
